fixed layout bug

--- a/assets/css/apps/note/cmps/note-container.css
+++ b/assets/css/apps/note/cmps/note-container.css
@@ -7,7 +7,8 @@
     padding: 20px;
 }
 
-.pinned-notes-section, .unpinned-notes-section {
+.pinned-notes-section,
+.unpinned-notes-section {
     margin-bottom: 20px;
 }
 
@@ -26,6 +27,9 @@ h2 {
 }
 
 .search-input {
+    margin-bottom: 30px;
+    margin-top: 20px;
+    margin-left: 10%;
     width: 80%;
     max-width: 500px;
     padding: 12px;
