--- a/assets/css/apps/note/mq.css
+++ b/assets/css/apps/note/mq.css
@@ -89,5 +89,19 @@
         overflow: auto;
         animation: openModal 0.6s ease forwards; /* Modal opening animation */
     }
+
+    .search-input {
+        margin-top: 20px;
+        margin-left: 10%;
+        width: 80%;
+        max-width: 300px !important;
+        padding: 12px;
+        border: none;
+        font-size: 16px;
+        background-color: #fff;
+        border-radius: 8px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+    
 }
 
